--- a/manifest.json
+++ b/manifest.json
@@ -1,39 +1,36 @@
 {
-  "name": "HackerWeb",
-  "short_name": "HackerWeb",
+  "name": "PWA",
+  "short_name": "PWA",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#fff",
-  "description": "A simply readable Hacker News app.",
+  "background_color": "black",
+  "description": "App PWA",
   "icons": [{
-    "src": "images/touch/homescreen48.png",
+    "src": "images/eclipse48.png",
     "sizes": "48x48",
     "type": "image/png"
   }, {
-    "src": "images/touch/homescreen72.png",
+    "src": "images/eclipse72.png",
     "sizes": "72x72",
     "type": "image/png"
   }, {
-    "src": "images/touch/homescreen96.png",
+    "src": "images/eclipse96.png",
     "sizes": "96x96",
     "type": "image/png"
   }, {
-    "src": "images/touch/homescreen144.png",
+    "src": "images/ecplise144.png",
     "sizes": "144x144",
     "type": "image/png"
   }, {
-    "src": "images/touch/homescreen168.png",
+    "src": "images/ecplise168.png",
     "sizes": "168x168",
     "type": "image/png"
   }, {
-    "src": "images/touch/homescreen192.png",
+    "src": "images/ecplise.png",
     "sizes": "192x192",
     "type": "image/png"
   }],
   "related_applications": [{
     "platform": "web"
-  }, {
-    "platform": "play",
-    "url": "https://play.google.com/store/apps/details?id=cheeaun.hackerweb"
   }]
 }
