--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
     "sizes": "96x96",
     "type": "image/png"
   }, {
-    "src": "images/ecplise144.png",
+    "src": "images/eclipse144.png",
     "sizes": "144x144",
     "type": "image/png"
   }, {
