--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "PWA",
   "short_name": "PWA",
-  "start_url": "https://m0onfall.github.io/AulaPWA_PAM/",
+  "start_url": ".",
   "display": "standalone",
   "background_color": "black",
   "description": "App PWA",
